// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change icon class prefix when using icon-prefix prop 1`] = `
<transition-stub role="button"
                 tabindex="0"
>
  <div class="van-overlay">
  </div>
</transition-stub>
<transition-stub>
  <div role="dialog"
       tabindex="0"
       class="van-popup van-popup--center"
  >
    <i class="van-badge__wrapper my-icon my-icon-cross van-popup__close-icon van-popup__close-icon--top-right van-haptics-feedback"
       role="button"
       tabindex="0"
    >
    </i>
  </div>
</transition-stub>
`;

exports[`should render correct close icon when using close-icon prop 1`] = `
<i class="van-badge__wrapper van-icon van-icon-success van-popup__close-icon van-popup__close-icon--top-right van-haptics-feedback"
   role="button"
   tabindex="0"
>
</i>
`;

exports[`should render overlay-content slot correctly 1`] = `
<transition-stub role="button"
                 tabindex="0"
>
  <div class="van-overlay">
    Custom Overlay Content
  </div>
</transition-stub>
<transition-stub>
  <div role="dialog"
       tabindex="0"
       class="van-popup van-popup--center"
  >
  </div>
</transition-stub>
`;
